# django_rassilka_messages

./: .gitignore  README.md  pyproject.toml
app/: db.sqlite3  sender_messagi.session  tg_send_message.py
app/app/: settings.py  urls.py
app/rassilka_messages/: Config.py  apps.py  forms.py  sender_messagi.session  sender_messagi.session-journal  tg_send_message.py  urls.py  views.py
app/static/css/: style.css
app/templates/: base.html  index.html
app/tg_bot/: urls.py  views.py
django_rassilka_messages/: pyproject.toml
