[tool.poetry]
name = "rassilka-tg"
version = "0.1.0"
description = ""
authors = ["maks <makselizarev@gmail.com>"]
readme = "README.md"
packages = [{include = "rassilka_tg"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
requests = "^2.28.2"
telethon = "^1.28.2"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
