[tool.poetry]
name = "django-rassilka-messages"
version = "0.1.0"
description = ""
authors = ["maks <makselizarev@gmail.com>"]
readme = "README.md"
packages = [{include = "django_rassilka_messages"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
